--- a/foodhub-client/src/styles/mobileNavbar.css
+++ b/foodhub-client/src/styles/mobileNavbar.css
@@ -20,9 +20,8 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0px 32px;
+    /* full width */
+    padding: 24px 32px;
 }
 
 .navbar-right {
